5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4144/executions/1836_1276.log
== TEST (2019-06-29 23:11:28) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array([
[2, 2, 3, 4, 5, 8, 8], 
[7, 7, 4, 3, 3, 4, 4],
[3, 3, 4, 3, 3, 2, 2],
[9, 9, 4, 7, 3, 4, 1]
])

for i in range(mat):
	for j in range(mat):
		if(mat(i,j)=max(mat(i,j)))
		print(i)
-- ERROR:
File "XXXX", line 12
    if(mat(i,j)=max(mat(i,j)))
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-29 23:11:35) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array([
[2, 2, 3, 4, 5, 8, 8], 
[7, 7, 4, 3, 3, 4, 4],
[3, 3, 4, 3, 3, 2, 2],
[9, 9, 4, 7, 3, 4, 1]
])

for i in range(mat):
	for j in range(mat):
		if(mat(i,j)=max(mat(i,j)))
		print(i)
-- EXECUTION TIME:
0.575042
-- ERROR:
  File "/home/codebench/codes/1836/1276/main.py", line 12
    if(mat(i,j)=max(mat(i,j)))
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 23:12:01) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array([
[2, 2, 3, 4, 5, 8, 8], 
[7, 7, 4, 3, 3, 4, 4],
[3, 3, 4, 3, 3, 2, 2],
[9, 9, 4, 7, 3, 4, 1]
])

for i in range(mat):
	for j in range(mat):
		if(mat(i,j)=max(mat(i,j)))
		print(i)
-- ERROR:
File "XXXX", line 12
    if(mat(i,j)=max(mat(i,j)))
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-29 23:12:21) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array([
[2, 2, 3, 4, 5, 8, 8], 
[7, 7, 4, 3, 3, 4, 4],
[3, 3, 4, 3, 3, 2, 2],
[9, 9, 4, 7, 3, 4, 1]
])

for i in range(mat):
	for j in range(mat):
		if(mat(i,j)=max(mat))
		print(i)
-- ERROR:
File "XXXX", line 12
    if(mat(i,j)=max(mat))
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:28:21) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite:")))
funcionarios = shape(mat)[0]
horas = zeros(7, dtype=int)
for j in range(7):
	horas[j] = sum(mat[:,j])
for i in range(size(horas)):
	if(max(horas)==horas[i]):
		print(i+1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 20:30:05) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("digite:")))
funcionarios = shape(mat)[0]
horas = zeros(7, dtype=int)
for j in range(7):
	horas[j] = sum(mat[:,j])
for i in range(size(horas)):
	if(max(horas)==horas[i]):
		print(i+1)
-- EXECUTION TIME:
1.20883
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
2
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
